# posterino

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/social/: bluesky.rs  mastodon.rs  mod.rs  twitter.rs
