[package]
name = "posterino"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth1 = "1.0.0"
async-trait = "0.1.83"
toml = "0.8.19"
dirs = "5.0"
