[package]
name = "posterino"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
oauth1 = "1.0.0"
async-trait = "0.1.83"
toml = "0.8.19"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
